@startuml
class Hotel {
  - nom: String
  - adresse: String
  - etoiles: int
  - rooms: List<Room>
  - users: List<User>
}

class Gestionnaire {
  - Hotel hotel
  - List<Booking> bookings
  - List<User> users
  - List<Room> rooms
  - Scanner sc
}

class Booking {
  - int id
  - User user
  - Room room
  - LocalDate dateDebut
  - LocalDate dateFin
}

class User {
  - int userId
  - String firstName
  - String lastName
  - String email
  - String phoneNumber
  - String password
}

class Room {
  - int roomNumber
  - int price
  - String bedType
  - String description
  - boolean available
}

Hotel "1" -- "1" Gestionnaire : manages
Hotel "1" -- "*" Room : contains
Hotel "1" -- "*" User : contains
Gestionnaire "1" -- "*" Booking : creates
Gestionnaire "1" -- "*" Room : manages
Gestionnaire "1" -- "*" User : manages
Booking "1" -- "1" User : belongs to
Booking "1" -- "1" Room : books
@enduml